# JOB-20260705032930-000129

./: .env.production.example  .gitignore  COVER_LETTER.txt  DEPLOY.md  Dockerfile  Dockerfile.production  OUT_OF_SCOPE.md  PROPOSAL.md  README.md  SPEC.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.production.txt  requirements.txt
.planning/: EXECUTION-SUMMARY.md  JOB-129-POC-SCOPE.md  OPENCODE-PIPELINE-LOG.md
.planning/phases/01-classifier-baseline/: PLAN-01.md
.planning/phases/02-router-confidence/: PLAN-01.md
.planning/phases/03-audit-immutability/: PLAN-01.md
.planning/phases/04-intake-idempotency/: PLAN-01.md
.planning/phases/05-reviewer-workflow/: PLAN-01.md
.planning/phases/1-classifier/: PLAN-01.md
.planning/phases/2-router-audit/: PLAN-01.md
.planning/phases/3-intake-worker/: PLAN-01.md
.planning/phases/4-review-ui/: -SUMMARY-01.md  PLAN-01.md
deploy/: azure-container-apps.bicep  otel-collector-config.yaml
deploy/modules/: managed-cert.bicep
docs/: production-vs-poc.md
docs/inbox/: 1099-int-sample-001.txt  unknown-sample-001.txt
helm/cpa-doc-intake/: Chart.yaml  values.yaml
helm/cpa-doc-intake/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  (+6 more)
samples/: 1099-b-sample-001.txt  1099-div-sample-001.txt  k1-sample-001.txt  w2-sample-001.txt
scripts/: build_diagrams.py  build_workflow_svg.py  clean.sh  demo.sh  e2e_smoke.sh  run_ui.sh  test.sh  validate_gsd_plans.py
src/: document_classifier.py  router.py  runner.py  ui.py
tests/: test_classifier_router.py  test_ui_smoke.py
